--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.TicketHouse"
         tools:targetApi="31">
         <activity
+            android:name=".update"
+            android:exported="false" />
+        <activity
+            android:name=".adminhome"
+            android:exported="false" />
+        <activity
             android:name=".ticket"
             android:exported="false" />
         <activity
